Fix link wrap issue at small screen sizes

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,3 +21,9 @@ nav {
 .card-content {
   height: 110px;
 }
+
+@media only screen and (max-width: 992px) {
+  .card-action a {
+    margin-right: 0 !important;
+  }
+}
